mor on weekview

--- a/main.scss
+++ b/main.scss
@@ -4,4 +4,5 @@
 
 //Components
 @import "style/components/commons";
+@import "style/components/currentView";
 @import "style/components/weekDayList";
