--- a/main.css
+++ b/main.css
@@ -12,6 +12,19 @@
   align-items: flex-end;
   gap: 5px;
 }
+.week-day-list .week-day-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  font-size: 12px;
+  padding-right: 20px;
+}
+.week-day-list .week-day-header p {
+  margin: 8px 0 8px 0;
+}
 .week-day-list .week-day-btn {
   display: flex;
   flex-direction: row;
