--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
-.row {
+header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+}
+header img {
+  width: 80px;
 }
 
 .current-view {
@@ -10,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 50px 0;
 }
 .current-view h1 {
   margin: 5px 0 0 0;
@@ -18,6 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   gap: 5px;
 }
 .current-view .date-info-div h2 {
@@ -33,6 +38,7 @@
 }
 .current-view .weather-info-div .current-icon {
   width: 50px;
+  filter: invert(1) grayscale(100%) brightness(1000%);
 }
 .current-view .weather-info-div p {
   font-size: 40px;
@@ -44,18 +50,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   gap: 5px;
+  padding: 0 10px;
 }
 .week-day-list .week-day-header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  justify-content: flex-end;
   gap: 12px;
   width: 100%;
   font-size: 12px;
-  padding-right: 20px;
+  padding-right: 30px;
 }
 .week-day-list .week-day-header p {
   margin: 8px 0 8px 0;
@@ -63,36 +71,57 @@
 .week-day-list .week-day-btn {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 16px;
+  border: none;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.04) 100%);
 }
 .week-day-list .week-day-btn .date-info-div {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 15px;
 }
 .week-day-list .week-day-btn .weather-info-div {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 20px;
 }
 .week-day-list .week-day-btn .weather-info-div .week-day-icon {
   width: 20px;
+  filter: invert(1) grayscale(100%) brightness(1000%);
 }
 .week-day-list .week-day-btn .weather-info-div .week-day-temperature-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 .week-day-list .week-day-btn .weather-info-div .week-day-temperature-div h3 {
   margin: 2px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+body {
+  margin: 0;
+  background-color: #20a2be;
+}
+
+* {
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
