--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -1,7 +1,9 @@
 footer {
+    width: 100%;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: auto;
 }
