--- a/main.scss
+++ b/main.scss
@@ -7,6 +7,7 @@
 @import "style/components/header";
 @import "style/components/currentView";
 @import "style/components/weekDayList";
+@import "style/components/dayList";
 @import "style/components/footer";
 
 html{
