--- a/style/partials/_variables.scss
+++ b/style/partials/_variables.scss
@@ -1,5 +1,7 @@
 $maincolor: #20a2be;
 $mainTextColor: #fff;
 $secondTextColor: black;
+$searchBackground: #fff;
+$searchBackgroundHover: #e3e1e1;
 $borderRadius: 8px;
 $listGap: 8px;
