--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ header .logo-div img {
 }
 header .search-div {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -20,7 +20,11 @@ header .search-div .search-bar-div input {
   border: none;
   border-radius: 16px 0 0 16px;
   height: 30px;
+  padding-left: 10px;
   color: black;
+}
+header .search-div .search-bar-div input:active, header .search-div .search-bar-div input:focus {
+  outline: none;
 }
 header .search-div .search-icon-div {
   background-color: #fff;
@@ -37,16 +41,44 @@ header .search-div .search-icon-div {
 header .search-div .search-icon-div img {
   height: 20px;
 }
-header .search-div .search-results #placesList {
-  list-style: none;
+header .search-div .search-results {
+  z-index: 1;
+  top: 60px;
+  right: 0;
+  position: absolute;
+  border-radius: 8px;
+  background-color: #fff;
+  margin: 0 10px 0 10px;
 }
-header .search-div .search-results #placesList .place-btn {
+header .search-div .search-results #placesList {
+  border-radius: 8px;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+header .search-div .search-results #placesList li:first-child {
+  border-radius: 8px 8px 0 0;
+}
+header .search-div .search-results #placesList li:last-child {
+  border-radius: 0 0 8px 8px;
+}
+header .search-div .search-results #placesList li .place-btn {
+  cursor: pointer;
+  border-radius: inherit;
   display: flex;
   align-items: center;
   color: black;
+  text-align: left;
+  width: 100%;
+  border: none;
+  background-color: #fff;
 }
-header .search-div .search-results #placesList .place-btn .flag {
+header .search-div .search-results #placesList li .place-btn:hover {
+  background-color: #e3e1e1;
+}
+header .search-div .search-results #placesList li .place-btn .flag {
   width: 30px;
+  margin-right: 5px;
 }
 
 .current-view {
@@ -133,24 +165,31 @@ header .search-div .search-results #placesList .place-btn .flag {
   border: none;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.04) 100%);
 }
+.week-day-list .week-day-btn:hover {
+  cursor: pointer;
+}
 .week-day-list .week-day-btn .date-info-div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
 }
 .week-day-list .week-day-btn .date-info-div h2 {
-  min-width: 95px;
+  min-width: 90px;
   text-align: left;
   font-size: 16px;
+}
+.week-day-list .week-day-btn .date-info-div h3 {
+  width: 31px;
+  text-align: left;
 }
 .week-day-list .week-day-btn .weather-info-div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 }
 .week-day-list .week-day-btn .weather-info-div .week-day-icon {
   width: 20px;
@@ -274,4 +313,18 @@ main {
 
 * {
   color: #fff;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
