--- a/main.css
+++ b/main.css
@@ -206,6 +206,29 @@ header .search-div .search-results #placesList li .place-btn .flag {
   margin: 2px;
 }
 
+.bread-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  max-width: 500px;
+  margin: auto;
+  gap: 5px;
+  justify-content: left;
+}
+.bread-nav .bread-nav-home {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.bread-nav .bread-nav-home .home-icon-holder .home-icon {
+  width: 20px;
+  filter: invert(1) grayscale(100%) brightness(1000%);
+}
+
 .day-list {
   width: 90%;
   max-width: 500px;
