--- a/style/components/_dayList.scss
+++ b/style/components/_dayList.scss
@@ -1,3 +1,22 @@
+.bread-nav {
+    @include row;
+    width: 90%;
+    max-width: 500px;
+    margin: auto;
+    gap: 5px;
+    justify-content: left;
+    .bread-nav-home {
+        @include row;
+        gap: 5px;
+        .home-icon-holder {
+            .home-icon {
+                width: 20px;
+                @include iconColor;
+            }
+        }
+    }
+}
+
 .day-list {
     width: 90%;
     max-width: 500px;
